fix: menu page overflowing

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,3 +1,7 @@
+.menupage{
+    width:100%;
+    overflow: hidden;
+}
 .menu-container{
     width:100%;
     height:auto;
